[refactor/#153] 리팩토링 완료